# Co-Coverage

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/app_loader/: AppLoad.h  AppLoadRequest.h  AppLoadResponse.h  AppUnload.h  AppUnloadRequest.h  AppUnloadResponse.h  RTDestroy.h  RTDestroyRequest.h  RTDestroyResponse.h
devel/include/co_coverage/: Status.h  Subteam.h  SubteamOrder.h  SubteamParameters.h  Team.h
devel/include/gsdf_msgs/: BarrierAck.h  BarrierSyn.h  BlackBoardAck.h  BlackBoardPut.h  BlackBoardQuery.h  CommContent.h  CommHeader.h  CommPacket.h  JoinSwarm.h  LeaveSwarm.h  NeighborBroadcastKeyValue.h  RobotBase.h  SCDSPSOGet.h  SCDSPSOPut.h  SwarmList.h  VirtualStigmergyPut.h  VirtualStigmergyPuts.h  VirtualStigmergyQuery.h
devel/include/hector_uav_msgs/: EnableMotorsRequest.h  PoseGoal.h  (+21 more)
src/co-coverage/: CMakeLists.txt  package.xml
src/co_coverage/: CMakeLists.txt
src/robotformations/: CMakeLists.txt  README.txt  package.xml
src/robotformations/launch/: ISRsea1.inc  ISRsea1_map.pgm  co_coverage_formation.launch  demo_1.world  demo_col.world  demo_switch.world  stage_5robots.launch  stage_5robots_no_limit_fov.launch  stage_5robots_no_limit_fov_exagon.launch  stage_column_ISRsea.launch  stage_oblique_ISRsea.launch  stage_switch_ISRsea.launch  wild.inc  wild.pgm
src/robotformations/rviz_configs/: stage_multi_p3dx.rviz
src/robotformations/src/: rf_node_column_sim.cpp  rf_node_column_simCamera.cpp  rf_node_oblique_sim.cpp  rf_node_oblique_simCamera.cpp  rf_node_switch_column2oblique_simCamera.cpp
(+185 files in other folders)
